--- a/main.ui
+++ b/main.ui
@@ -32,7 +32,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QLabel" name="AutolabelTotal">
+      <widget class="QLabel" name="labelAutoTotal">
        <property name="text">
         <string>0</string>
        </property>
@@ -53,14 +53,14 @@
       </widget>
      </item>
      <item row="2" column="1">
-      <widget class="QLabel" name="AutolabelAvgDay">
+      <widget class="QLabel" name="labelAutoAvgDay">
        <property name="text">
         <string>0</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLabel" name="AutolabelPerMonth">
+      <widget class="QLabel" name="labelAutoMonthlyLast">
        <property name="text">
         <string>0</string>
        </property>
@@ -104,7 +104,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>1996-04-18 00-00-00</string>
+     <string>1991-01-01 00-00-00</string>
     </property>
    </widget>
    <widget class="QCheckBox" name="checkBoxBalance">
