--- a/main.ui
+++ b/main.ui
@@ -107,30 +107,30 @@
      <string>1991-01-01 00-00-00</string>
     </property>
    </widget>
-   <widget class="QCheckBox" name="checkBoxBalance">
-    <property name="geometry">
-     <rect>
-      <x>510</x>
-      <y>150</y>
-      <width>131</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>加入過去剩餘</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="buttonDepositeAndBudget">
     <property name="geometry">
      <rect>
-      <x>510</x>
-      <y>240</y>
+      <x>500</x>
+      <y>140</y>
       <width>128</width>
       <height>28</height>
      </rect>
     </property>
     <property name="text">
      <string>存款/預算</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="buttonPrevious">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>240</y>
+      <width>93</width>
+      <height>28</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>復原</string>
     </property>
    </widget>
   </widget>
