--- a/setting.ui
+++ b/setting.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>存款/預算</string>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
