--- a/main.ui
+++ b/main.ui
@@ -97,8 +97,8 @@
    <widget class="QLabel" name="labelUpdateTime">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>60</y>
+      <x>510</x>
+      <y>70</y>
       <width>128</width>
       <height>21</height>
      </rect>
@@ -110,8 +110,8 @@
    <widget class="QPushButton" name="buttonDepositeAndBudget">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>140</y>
+      <x>510</x>
+      <y>150</y>
       <width>128</width>
       <height>28</height>
      </rect>
@@ -123,7 +123,7 @@
    <widget class="QPushButton" name="buttonPrevious">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>530</x>
       <y>240</y>
       <width>93</width>
       <height>28</height>
@@ -131,6 +131,19 @@
     </property>
     <property name="text">
      <string>復原</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>40</y>
+      <width>101</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>最後更新時間:</string>
     </property>
    </widget>
   </widget>
