--- a/record.ui
+++ b/record.ui
@@ -16,7 +16,7 @@
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>0</x>
      <y>350</y>
      <width>341</width>
      <height>32</height>
@@ -42,7 +42,7 @@
   <widget class="QComboBox" name="comboBoxType">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>100</x>
      <y>300</y>
      <width>81</width>
      <height>22</height>
@@ -52,17 +52,17 @@
   <widget class="QComboBox" name="comboBoxItem">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>220</x>
      <y>300</y>
      <width>80</width>
      <height>22</height>
     </rect>
    </property>
   </widget>
-  <widget class="QLineEdit" name="editSpending">
+  <widget class="QLineEdit" name="editMoney">
    <property name="geometry">
     <rect>
-     <x>320</x>
+     <x>340</x>
      <y>300</y>
      <width>101</width>
      <height>22</height>
@@ -72,7 +72,7 @@
   <widget class="QLabel" name="labelType">
    <property name="geometry">
     <rect>
-     <x>70</x>
+     <x>100</x>
      <y>260</y>
      <width>71</width>
      <height>20</height>
@@ -85,7 +85,7 @@
   <widget class="QLabel" name="labelItem">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>220</x>
      <y>260</y>
      <width>61</width>
      <height>21</height>
@@ -98,7 +98,7 @@
   <widget class="QLabel" name="labelSpending">
    <property name="geometry">
     <rect>
-     <x>320</x>
+     <x>340</x>
      <y>260</y>
      <width>61</width>
      <height>21</height>
@@ -106,6 +106,19 @@
    </property>
    <property name="text">
     <string>金額:</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="checkBoxIncome">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>300</y>
+     <width>61</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>收入</string>
    </property>
   </widget>
  </widget>
